fix overflow-x bug

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,6 +1,7 @@
 body {
     width: 100%;
     background-color: #efefef;
+    overflow-x: hidden;
 }
 
 .contentTop {
